ancored the subbutton to the new menu. fixed alignent of buttons, size of menu. think i fixed tailwind so that it rebuilds on hot reload as well

--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -828,6 +828,10 @@ select {
   bottom: 0px;
 }
 
+.bottom-12 {
+  bottom: 3rem;
+}
+
 .bottom-16 {
   bottom: 4rem;
 }
@@ -860,6 +864,10 @@ select {
   right: 2.5rem;
 }
 
+.right-11 {
+  right: 2.75rem;
+}
+
 .right-4 {
   right: 1rem;
 }
@@ -870,6 +878,10 @@ select {
 
 .top-14 {
   top: 3.5rem;
+}
+
+.top-28 {
+  top: 7rem;
 }
 
 .top-3 {
@@ -918,14 +930,6 @@ select {
 
 .z-50 {
   z-index: 50;
-}
-
-.-m-1 {
-  margin: -0.25rem;
-}
-
-.-m-1\.5 {
-  margin: -0.375rem;
 }
 
 .-m-2 {
@@ -1342,9 +1346,9 @@ select {
   justify-content: space-between;
 }
 
-.gap-x-14 {
-  -moz-column-gap: 3.5rem;
-       column-gap: 3.5rem;
+.gap-x-16 {
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
 }
 
 .gap-x-2 {
@@ -1812,12 +1816,8 @@ select {
   background-origin: border-box;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-1\.5 {
-  padding: 0.375rem;
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-2 {
@@ -2630,8 +2630,8 @@ select {
     top: 9rem;
   }
 
-  .lg\:top-4 {
-    top: 1rem;
+  .lg\:top-6 {
+    top: 1.5rem;
   }
 
   .lg\:mx-0 {
